--- a/ui/templates/ui/index.html
+++ b/ui/templates/ui/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>BGDict{% if search %} - {{ search %}{% endif %}</title>
+    <title>BGDict{% if search %} - {{ search }}{% endif %}</title>
     <link href="/static/css/default.css" rel="stylesheet" type="text/css">
     <link href="/static/css/night.css" rel="alternate stylesheet" title="Night" type="text/css">
 
