--- a/ui/templates/ui/index.html
+++ b/ui/templates/ui/index.html
@@ -78,7 +78,7 @@
 <hr>
 {% endif %}
 
-{{ msg }}
+{{ msg }} - {% if dict_link %}<a href="{{ dict_link }}">Dict.com</a>{% endif %}
 <hr>
 {% if results %}
     <div style="width: 50%;">
